# RubiksCubeSolver

./: CMakeLists.txt  README.md  main.cpp
Models/: RubiksCube.cpp  RubiksCube.h  RubiksCube1DArray.cpp  RubiksCube3DArray.cpp  RubiksCubeBitBoard.cpp
Models/PatternDatabase/: PatternDatabase.h
PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
